Bug 450754 - "Non-ascii(passed in modified UTF-7) or Localized IMAP folder names don't show the pretty name until logged in" [r+sr=Standard8]